# dingus

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  default.nix  shell.nix
nix/: rust.nix  sources.json
src/: app.rs  constants.rs  error.rs  main.rs
src/dingus/: app.rs  constants.rs  error.rs  mod.rs
src/lib/: app.rs  cli.rs  config_directory.rs  config_file.rs  environment.rs  error.rs  mod.rs  shell.rs
src/lib/subcommands/: list.rs  mod.rs  run.rs  session.rs
