[package]
name                = "dingus"
version             = "0.5.7"
authors             = ["David Lewis <davidlewis@mac.com>"]
description         = "Easily apply environment variables loaded from a config file to a shell session."
license             = "MIT"
homepage            = "https://github.com/davidarmstronglewis/dingus"
readme              = "README.md"
edition             = "2018"

[dependencies]
serde               = "1.0.85"
serde_derive        = "1.0.85"
serde_yaml          = "0.8.8"
failure             = "0.1.5"
ansi_term           = "0.11.0"
nix                 = "0.13.0"

[dependencies.clap]
version             = "2.32.0"
features            = ["suggestions", "color", "wrap_help"]
