[package]
name                = "dingus"
version             = "0.6.0"
authors             = ["David Lewis <david@armstronglewis.com>"]
description         = "Easily apply environment variables loaded from a config file to a shell session."
license             = "MIT"
homepage            = "https://github.com/davidarmstronglewis/dingus"
readme              = "README.md"
edition             = "2018"

[dependencies]
serde               = "1.0.104"
serde_derive        = "1.0.104"
serde_yaml          = "0.8.11"
thiserror           = "1.0.11"
ansi_term           = "0.12.1"
nix                 = "0.17.0"
structopt           = "0.3.11"
dirs                = "2.0.2"

[dependencies.clap]
version             = "2.33.0"
features            = ["suggestions", "color", "wrap_help"]
